move stylesheet and code to separate files

--- a/static/index.html
+++ b/static/index.html
@@ -2,87 +2,8 @@
 <html>
 <head>
   <title>Anzeige des JSON</title>
-  <style>
-    :root {
-      --akzentfarbe: #B57EDC; /* Lavendel */
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      color: #333;
-      background-color: #fff;
-      margin: 0;
-      padding: 20px;
-    }
-
-    h1 {
-      color: var(--akzentfarbe);
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-
-    th, td {
-      padding: 10px;
-      text-align: left;
-      border-bottom: 1px solid #ccc;
-    }
-
-    th {
-      font-weight: bold;
-    }
-
-    td {
-      color: var(--akzentfarbe);
-    }
-
-    @media (max-width: 768px) {
-      th, td {
-        padding: 5px;
-      }
-    }
-  </style>
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      fetch('methoden.json')
-        .then(response => response.json())
-        .then(jsonData => {
-
-          // ein zufälliges Listenelement auswählen
-          const randomIndex = Math.floor(Math.random() * jsonData.length);
-          jsonData = jsonData[randomIndex];
-          // JSON erfolgreich eingelesen
-          // Felder der Tabelle füllen
-          document.getElementById('titel').textContent = jsonData.Titel;
-          document.getElementById('zielgruppe').textContent = jsonData.Zielgruppe;
-          document.getElementById('anwendungsfall').textContent = jsonData.Anwendungsfall;
-          document.getElementById('beschreibung').textContent = jsonData.Beschreibung;
-          document.getElementById('minPersonenzahl').textContent = jsonData.GeeignetePersonenzahl.min;
-          document.getElementById('maxPersonenzahl').textContent = jsonData.GeeignetePersonenzahl.max;
-          document.getElementById('partizipationsgrad').textContent = jsonData.Partizipation.Partizipationsgrad;
-          document.getElementById('artDerPartizipation').textContent = jsonData.Partizipation.ArtDerPartizipation;
-          document.getElementById('voraussetzungen').textContent = jsonData.Voraussetzungen;
-          document.getElementById('daten').textContent = jsonData.Daten;
-          document.getElementById('technischeTools').textContent = jsonData.TechnischeTools;
-          document.getElementById('finanzielleRessourcen').textContent = jsonData.FinanzielleRessourcen;
-          document.getElementById('risikoWagnis').textContent = jsonData.RisikoWagnis;
-          document.getElementById('schwierigkeitenHindernisse').textContent = jsonData.SchwierigkeitenHindernisse;
-          document.getElementById('ursprungTopDown').textContent = jsonData.Ursprung.TopDown;
-          document.getElementById('ursprungBottomUp').textContent = jsonData.Ursprung.BottomUp;
-          document.getElementById('dauerIntervall').textContent = jsonData.DauerIntervall;
-          document.getElementById('vorbereitungszeitUmsetzung').textContent = jsonData.Vorbereitungszeit.Umsetzung;
-          document.getElementById('vorbereitungszeitInitiierung').textContent = jsonData.Vorbereitungszeit.Initiierung;
-          document.getElementById('nachhaltigkeit').textContent = jsonData.Nachhaltigkeit;
-          document.getElementById('ergebnistyp').textContent = jsonData.Ergebnistyp;
-        })
-        .catch(error => {
-          console.error('Fehler beim Lesen der JSON-Datei:', error);
-        });
-    });
-  </script>
+  <link rel="stylesheet" href="index.css">
+  <script src="index.js"></script>
 </head>
 <body>
   <h1>Partizipationsmethode</h1>
