switch to 1 column design

--- a/static/index.html
+++ b/static/index.html
@@ -7,90 +7,89 @@
 </head>
 <body>
   <h1>Partizipationsmethode</h1>
-  <table>
-    <tr>
-      <td>Titel:</td>
-      <td id="titel"></td>
-    </tr>
-    <tr>
-      <td>Zielgruppe:</td>
-      <td id="zielgruppe"></td>
-    </tr>
-    <tr>
-      <td>Anwendungsfall:</td>
-      <td id="anwendungsfall"></td>
-    </tr>
-    <tr>
-      <td>Beschreibung:</td>
-      <td id="beschreibung"></td>
-    </tr>
-    <tr>
-      <td>Geeignete Personenzahl (min-max):</td>
-      <td id="minPersonenzahl"></td>
-      <td>-</td>
-      <td id="maxPersonenzahl"></td>
-    </tr>
-    <tr>
-      <td>Partizipationsgrad:</td>
-      <td id="partizipationsgrad"></td>
-    </tr>
-    <tr>
-      <td>Art der Partizipation:</td>
-      <td id="artDerPartizipation"></td>
-    </tr>
-    <tr>
-      <td>Voraussetzungen:</td>
-      <td id="voraussetzungen"></td>
-    </tr>
-    <tr>
-      <td>Daten:</td>
-      <td id="daten"></td>
-    </tr>
-    <tr>
-      <td>Technische Tools:</td>
-      <td id="technischeTools"></td>
-    </tr>
-    <tr>
-      <td>Finanzielle Ressourcen:</td>
-      <td id="finanzielleRessourcen"></td>
-    </tr>
-    <tr>
-      <td>Risiko/Wagnis:</td>
-      <td id="risikoWagnis"></td>
-    </tr>
-    <tr>
-      <td>Schwierigkeiten/Hindernisse:</td>
-      <td id="schwierigkeitenHindernisse"></td>
-    </tr>
-    <tr>
-      <td>Ursprung Top-Down:</td>
-      <td id="ursprungTopDown"></td>
-    </tr>
-    <tr>
-      <td>Ursprung Bottom-Up:</td>
-      <td id="ursprungBottomUp"></td>
-    </tr>
-    <tr>
-      <td>Dauer Intervall:</td>
-      <td id="dauerIntervall"></td>
-    </tr>
-    <tr>
-      <td>Vorbereitungszeit Umsetzung:</td>
-      <td id="vorbereitungszeitUmsetzung"></td>
-    </tr>
-    <tr>
-      <td>Vorbereitungszeit Initiierung:</td>
-      <td id="vorbereitungszeitInitiierung"></td>
-    </tr>
-    <tr>
-      <td>Nachhaltigkeit:</td>
-      <td id="nachhaltigkeit"></td>
-    </tr>
-    <tr>
-      <td>Ergebnistyp:</td>
-      <td id="ergebnistyp"></td>
-    </tr>
-  </table>
+  <section>
+    <h3>Titel:</h3>
+    <p id="titel"></p>
+  </section>
+  <section>
+    <h3>Zielgruppe:</h3>
+    <p id="zielgruppe"></p>
+  </section>
+  <section>
+    <h3>Anwendungsfall:</h3>
+    <p id="anwendungsfall"></p>
+  </section>
+  <section>
+    <h3>Beschreibung:</h3>
+    <p id="beschreibung"></p>
+  </section>
+  <section>
+    <h3>Geeignete Personenzahl (min-max):</h3>
+    <p id="minPersonenzahl"></p>
+    <p>-</p>
+    <p id="maxPersonenzahl"></p>
+  </section>
+  <section>
+    <h3>Partizipationsgrad:</h3>
+    <p id="partizipationsgrad"></p>
+  </section>
+  <section>
+    <h3>Art der Partizipation:</h3>
+    <p id="artDerPartizipation"></p>
+  </section>
+  <section>
+    <h3>Voraussetzungen:</h3>
+    <p id="voraussetzungen"></p>
+  </section>
+  <section>
+    <h3>Daten:</h3>
+    <p id="daten"></p>
+  </section>
+  <section>
+    <h3>Technische Tools:</h3>
+    <p id="technischeTools"></p>
+  </section>
+  <section>
+    <h3>Finanzielle Ressourcen:</h3>
+    <p id="finanzielleRessourcen"></p>
+  </section>
+  <section>
+    <h3>Risiko/Wagnis:</h3>
+    <p id="risikoWagnis"></p>
+  </section>
+  <section>
+    <h3>Schwierigkeiten/Hindernisse:</h3>
+    <p id="schwierigkeitenHindernisse"></p>
+  </section>
+  <section>
+    <h3>Ursprung Top-Down:</h3>
+    <p id="ursprungTopDown"></p>
+  </section>
+  <section>
+    <h3>Ursprung Bottom-Up:</h3>
+    <p id="ursprungBottomUp"></p>
+  </section>
+  <section>
+    <h3>Dauer Intervall:</h3>
+    <p id="dauerIntervall"></p>
+  </section>
+  <section>
+    <h3>Vorbereitungszeit Umsetzung:</h3>
+    <p id="vorbereitungszeitUmsetzung"></p>
+  </section>
+  <section>
+    <h3>Vorbereitungszeit Initiierung:</h3>
+    <p id="vorbereitungszeitInitiierung"></p>
+  </section>
+  <section>
+    <h3>Nachhaltigkeit:</h3>
+    <p id="nachhaltigkeit"></p>
+  </section>
+  <section>
+    <h3>Ergebnistyp:</h3>
+    <p id="ergebnistyp"></p>
+  </section>
+
 </body>
 </html>
 
