add silly card image

--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
     <div class="flip-card-inner">
       <div class="card-front">
         <section>
+          <img class="card-icon" src="imgs/shapes.png">
           <h3>Partizipationsmethode</h3>
           <h1 id="titel"></h1>
         </section>
