--- a/static/index.html
+++ b/static/index.html
@@ -7,99 +7,98 @@
   <script src="index.js"></script>
 </head>
 <body>
-<div>
-</div>
-
 <div class="card-container">
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="card-front">
-        <section>
-          <img class="card-icon" src="imgs/shapes.png">
-          <h3>Partizipationsmethode</h3>
-          <h1 id="titel"></h1>
-        </section>
+        <div class="spacing1">
+          <section>
+            <img class="card-icon" src="imgs/shapes.png">
+            <h3>Partizipationsmethode</h3>
+            <h1 id="titel"></h1>
+          </section>
+        </div>
       </div>
       <div class="card-back">
-        <div class="card-content">
-          <section>
-            <h3>Zielgruppe:</h3>
-            <p id="zielgruppe"></p>
-          </section>
-          <section>
-            <h3>Anwendungsfall:</h3>
-            <p id="anwendungsfall"></p>
+        <div class="card-scroll">
+          <div class="spacing1">
+            <section>
+              <h3>Zielgruppe</h3>
+              <p id="zielgruppe"></p>
             </section>
-          <section>
-            <h3>Beschreibung:</h3>
-            <p id="beschreibung"></p>
-          </section>
-          <section>
-            <h3>Geeignete Personenzahl (min-max):</h3>
-            <p id="minPersonenzahl"></p>
-            <p>-</p>
-            <p id="maxPersonenzahl"></p>
-          </section>
-          <section>
-            <h3>Partizipationsgrad:</h3>
-            <p id="partizipationsgrad"></p>
-          </section>
-          <section>
-            <h3>Art der Partizipation:</h3>
-            <p id="artDerPartizipation"></p>
-          </section>
-          <section>
-            <h3>Voraussetzungen:</h3>
-            <p id="voraussetzungen"></p>
-          </section>
-          <section>
-            <h3>Daten:</h3>
-            <p id="daten"></p>
-          </section>
-          <section>
-            <h3>Technische Tools:</h3>
-            <p id="technischeTools"></p>
-          </section>
-          <section>
-            <h3>Finanzielle Ressourcen:</h3>
-            <p id="finanzielleRessourcen"></p>
-          </section>
-          <section>
-            <h3>Risiko/Wagnis:</h3>
-            <p id="risikoWagnis"></p>
-          </section>
-          <section>
-            <h3>Schwierigkeiten/Hindernisse:</h3>
-            <p id="schwierigkeitenHindernisse"></p>
-          </section>
-          <section>
-            <h3>Ursprung Top-Down:</h3>
-            <p id="ursprungTopDown"></p>
-          </section>
-          <section>
-            <h3>Ursprung Bottom-Up:</h3>
-            <p id="ursprungBottomUp"></p>
-          </section>
-          <section>
-            <h3>Dauer Intervall:</h3>
-            <p id="dauerIntervall"></p>
-          </section>
-          <section>
-            <h3>Vorbereitungszeit Umsetzung:</h3>
-            <p id="vorbereitungszeitUmsetzung"></p>
-          </section>
-          <section>
-            <h3>Vorbereitungszeit Initiierung:</h3>
-            <p id="vorbereitungszeitInitiierung"></p>
-          </section>
-          <section>
-            <h3>Nachhaltigkeit:</h3>
-            <p id="nachhaltigkeit"></p>
-          </section>
-          <section>
-            <h3>Ergebnistyp:</h3>
-            <p id="ergebnistyp"></p>
-          </section>
+            <section>
+              <h3>Anwendungsfall</h3>
+              <p id="anwendungsfall"></p>
+              </section>
+            <section>
+              <h3>Beschreibung</h3>
+              <p id="beschreibung"></p>
+            </section>
+            <section>
+              <h3>Geeignete Personenzahl</h3>
+              <p id="personenzahl"></p>
+            </section>
+            <section>
+              <h3>Partizipationsgrad</h3>
+              <p id="partizipationsgrad"></p>
+            </section>
+            <section>
+              <h3>Art der Partizipation</h3>
+              <p id="artDerPartizipation"></p>
+            </section>
+            <section>
+              <h3>Voraussetzungen</h3>
+              <p id="voraussetzungen"></p>
+            </section>
+            <section>
+              <h3>Daten</h3>
+              <p id="daten"></p>
+            </section>
+            <section>
+              <h3>Technische Tools</h3>
+              <p id="technischeTools"></p>
+            </section>
+            <section>
+              <h3>Finanzielle Ressourcen</h3>
+              <p id="finanzielleRessourcen"></p>
+            </section>
+            <section>
+              <h3>Risiko/Wagnis</h3>
+              <p id="risikoWagnis"></p>
+            </section>
+            <section>
+              <h3>Schwierigkeiten/Hindernisse</h3>
+              <p id="schwierigkeitenHindernisse"></p>
+            </section>
+            <section>
+              <h3>Ursprung Top-Down</h3>
+              <p id="ursprungTopDown"></p>
+            </section>
+            <section>
+              <h3>Ursprung Bottom-Up</h3>
+              <p id="ursprungBottomUp"></p>
+            </section>
+            <section>
+              <h3>Dauer Intervall</h3>
+              <p id="dauerIntervall"></p>
+            </section>
+            <section>
+              <h3>Vorbereitungszeit Umsetzung</h3>
+              <p id="vorbereitungszeitUmsetzung"></p>
+            </section>
+            <section>
+              <h3>Vorbereitungszeit Initiierung</h3>
+              <p id="vorbereitungszeitInitiierung"></p>
+            </section>
+            <section>
+              <h3>Nachhaltigkeit</h3>
+              <p id="nachhaltigkeit"></p>
+            </section>
+            <section>
+              <h3>Ergebnistyp</h3>
+              <p id="ergebnistyp"></p>
+            </section>
+          </div>
         </div>
       </div>
     </div>
