add card footer with card index
my css skills suck

--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,10 @@
                 <img class="card-icon" src="imgs/shapes.png">
                 <h3>Partizipationsmethode</h3>
                 <h1 class="titel"></h1>
+                <div class="card-footer">
+                  <p class="card-num">0/0</p>
+                </div>
+              </section>
               </section>
             </div>
           </div>
@@ -115,6 +119,9 @@
                 <img class="card-icon" src="imgs/shapes.png">
                 <h3>Partizipationsmethode</h3>
                 <h1 class="titel"></h1>
+                <div class="card-footer">
+                  <p class="card-num">0/0</p>
+                </div>
               </section>
             </div>
           </div>
