--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
 <div class="slideshow">
   <div class="card-container">
     <div class="flip-card-container">
-      <button class="slide-button" id="prev">&lt</button>
+      <button class="slide-button" id="prev"></button>
       <div class="flip-card">
         <div class="flip-card-inner" id="off-card">
           <div class="card-front">
@@ -209,7 +209,7 @@
           </div>
         </div>
       </div>
-      <button class="slide-button" id="next">&gt</button>
+      <button class="slide-button" id="next"></button>
     </div>
   </div>
 </div>
