--- a/static/index.html
+++ b/static/index.html
@@ -12,8 +12,8 @@
   <div class="card-container">
     <div class="flip-card-container">
       <button class="slide-button" id="prev"></button>
-      <div class="flip-card">
-        <div class="flip-card-inner" id="off-card">
+      <div class="flip-card" id="off-card">
+        <div class="flip-card-inner">
           <div class="card-front">
             <div class="spacing1">
               <section>
@@ -111,8 +111,8 @@
           </div>
         </div>
       </div>
-      <div class="flip-card">
-        <div class="flip-card-inner" id="main-card">
+      <div class="flip-card" id="main-card">
+        <div class="flip-card-inner">
           <div class="card-front">
             <div class="spacing1">
               <section>
