try add mobile swipe gesture

--- a/static/index.html
+++ b/static/index.html
@@ -215,6 +215,7 @@
 <script src="index.js"></script>
 <script src="js/cardFlip.js"></script>
 <script src="js/slideshow.js"></script>
+<script src="js/mobileSwipe.js"></script>
 </body>
 </html>
 
