--- a/static/index.html
+++ b/static/index.html
@@ -5,8 +5,16 @@
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/card.css">
   <link rel="stylesheet" href="css/slideshow.css">
+  <link rel="stylesheet" href="css/menu.css">
 </head>
 <body>
+<div>
+  <ul class="navbar">
+    <li class="nav-item">
+      <a href="#" id="overview"></a>
+    </li>
+  </ul>
+</div>
 <div class="slideshow">
   <div class="card-container">
     <div class="flip-card-container">
