add card deck overview html page

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
+  <meta charset="UTF-8">
   <title>Anzeige des JSON</title>
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/card.css">
@@ -11,7 +12,7 @@
 <div>
   <ul class="navbar">
     <li class="nav-item">
-      <a href="#" id="overview"></a>
+      <a href="deck.html" id="deck-overview"></a>
     </li>
   </ul>
 </div>
