try fix margin and scolling in deck

--- a/static/deck.html
+++ b/static/deck.html
@@ -15,11 +15,13 @@
     </li>
   </ul>
 </div>
-<div id="search-container"></div>
-<div id="deck-container">
-  <div id="deck-inner"></div>
+<div id="content">
+  <div id="search-container"></div>
+  <div id="deck-container">
+    <div id="deck-inner"></div>
+  </div>
+  <script src="indexDeck.js"></script>
 </div>
-<script src="indexDeck.js"></script>
 </body>
 </html>
 
