Disband nav bar, make deck button floaty

--- a/static/index.html
+++ b/static/index.html
@@ -9,219 +9,213 @@
   <link rel="stylesheet" href="css/menu.css">
 </head>
 <body>
-  <ul class="navbar">
-    <li class="nav-item">
-      <a href="deck.html" id="deck-overview"></a>
-    </li>
-  </ul>
-<div id="content">
-  <div class="slideshow">
-    <div class="card-container">
-      <div class="flip-card-container">
-        <button class="slide-button" id="prev"></button>
-        <div class="flip-card" id="off-card">
-          <div class="flip-card-inner">
-            <div class="card-front">
+<a href="deck.html" id="deck-overview" class="main-btn"></a>
+<div class="slideshow">
+  <div class="card-container">
+    <div class="flip-card-container">
+      <button class="slide-button main-btn" id="prev"></button>
+      <div class="flip-card" id="off-card">
+        <div class="flip-card-inner">
+          <div class="card-front">
+            <div class="spacing1">
+              <section>
+                <img class="card-icon" src="imgs/shapes.png">
+                <h3>Partizipationsmethode</h3>
+                <h1 class="titel"></h1>
+                <div class="card-footer">
+                  <p class="card-num">0/0</p>
+                </div>
+              </section>
+              </section>
+            </div>
+          </div>
+          <div class="card-back">
+            <div class="card-scroll">
               <div class="spacing1">
                 <section>
-                  <img class="card-icon" src="imgs/shapes.png">
-                  <h3>Partizipationsmethode</h3>
-                  <h1 class="titel"></h1>
-                  <div class="card-footer">
-                    <p class="card-num">0/0</p>
-                  </div>
+                  <h3>Zielgruppe</h3>
+                  <p class="zielgruppe"></p>
                 </section>
+                <section>
+                  <h3>Anwendungsfall</h3>
+                  <p class="anwendungsfall"></p>
                 </section>
-              </div>
-            </div>
-            <div class="card-back">
-              <div class="card-scroll">
-                <div class="spacing1">
-                  <section>
-                    <h3>Zielgruppe</h3>
-                    <p class="zielgruppe"></p>
-                  </section>
-                  <section>
-                    <h3>Anwendungsfall</h3>
-                    <p class="anwendungsfall"></p>
-                  </section>
-                  <section>
-                    <h3>Beschreibung</h3>
-                    <p class="beschreibung"></p>
-                  </section>
-                  <section>
-                    <h3>Geeignete Personenzahl</h3>
-                    <p class="personenzahl"></p>
-                  </section>
-                  <section>
-                    <h3>Partizipationsgrad</h3>
-                    <p class="partizipationsgrad"></p>
-                  </section>
-                  <section>
-                    <h3>Art der Partizipation</h3>
-                    <p class="artDerPartizipation"></p>
-                  </section>
-                  <section>
-                    <h3>Voraussetzungen</h3>
-                    <p class="voraussetzungen"></p>
-                  </section>
-                  <section>
-                    <h3>Daten</h3>
-                    <p class="daten"></p>
-                  </section>
-                  <section>
-                    <h3>Technische Tools</h3>
-                    <p class="technischeTools"></p>
-                  </section>
-                  <section>
-                    <h3>Finanzielle Ressourcen</h3>
-                    <p class="finanzielleRessourcen"></p>
-                  </section>
-                  <section>
-                    <h3>Risiko/Wagnis</h3>
-                    <p class="risikoWagnis"></p>
-                  </section>
-                  <section>
-                    <h3>Schwierigkeiten/Hindernisse</h3>
-                    <p class="schwierigkeitenHindernisse"></p>
-                  </section>
-                  <section>
-                    <h3>Ursprung Top-Down</h3>
-                    <p class="ursprungTopDown"></p>
-                  </section>
-                  <section>
-                    <h3>Ursprung Bottom-Up</h3>
-                    <p class="ursprungBottomUp"></p>
-                  </section>
-                  <section>
-                    <h3>Dauer Intervall</h3>
-                    <p class="dauerIntervall"></p>
-                  </section>
-                  <section>
-                    <h3>Vorbereitungszeit Umsetzung</h3>
-                    <p class="vorbereitungszeitUmsetzung"></p>
-                  </section>
-                  <section>
-                    <h3>Vorbereitungszeit Initiierung</h3>
-                    <p class="vorbereitungszeitInitiierung"></p>
-                  </section>
-                  <section>
-                    <h3>Nachhaltigkeit</h3>
-                    <p class="nachhaltigkeit"></p>
-                  </section>
-                  <section>
-                    <h3>Ergebnistyp</h3>
-                    <p class="ergebnistyp"></p>
-                  </section>
-                </div>
+                <section>
+                  <h3>Beschreibung</h3>
+                  <p class="beschreibung"></p>
+                </section>
+                <section>
+                  <h3>Geeignete Personenzahl</h3>
+                  <p class="personenzahl"></p>
+                </section>
+                <section>
+                  <h3>Partizipationsgrad</h3>
+                  <p class="partizipationsgrad"></p>
+                </section>
+                <section>
+                  <h3>Art der Partizipation</h3>
+                  <p class="artDerPartizipation"></p>
+                </section>
+                <section>
+                  <h3>Voraussetzungen</h3>
+                  <p class="voraussetzungen"></p>
+                </section>
+                <section>
+                  <h3>Daten</h3>
+                  <p class="daten"></p>
+                </section>
+                <section>
+                  <h3>Technische Tools</h3>
+                  <p class="technischeTools"></p>
+                </section>
+                <section>
+                  <h3>Finanzielle Ressourcen</h3>
+                  <p class="finanzielleRessourcen"></p>
+                </section>
+                <section>
+                  <h3>Risiko/Wagnis</h3>
+                  <p class="risikoWagnis"></p>
+                </section>
+                <section>
+                  <h3>Schwierigkeiten/Hindernisse</h3>
+                  <p class="schwierigkeitenHindernisse"></p>
+                </section>
+                <section>
+                  <h3>Ursprung Top-Down</h3>
+                  <p class="ursprungTopDown"></p>
+                </section>
+                <section>
+                  <h3>Ursprung Bottom-Up</h3>
+                  <p class="ursprungBottomUp"></p>
+                </section>
+                <section>
+                  <h3>Dauer Intervall</h3>
+                  <p class="dauerIntervall"></p>
+                </section>
+                <section>
+                  <h3>Vorbereitungszeit Umsetzung</h3>
+                  <p class="vorbereitungszeitUmsetzung"></p>
+                </section>
+                <section>
+                  <h3>Vorbereitungszeit Initiierung</h3>
+                  <p class="vorbereitungszeitInitiierung"></p>
+                </section>
+                <section>
+                  <h3>Nachhaltigkeit</h3>
+                  <p class="nachhaltigkeit"></p>
+                </section>
+                <section>
+                  <h3>Ergebnistyp</h3>
+                  <p class="ergebnistyp"></p>
+                </section>
               </div>
             </div>
           </div>
         </div>
-        <div class="flip-card" id="main-card">
-          <div class="flip-card-inner">
-            <div class="card-front">
-              <div class="spacing1">
-                <section>
-                  <img class="card-icon" src="imgs/shapes.png">
-                  <h3>Partizipationsmethode</h3>
-                  <h1 class="titel"></h1>
-                  <div class="card-footer">
-                    <p class="card-num">0/0</p>
-                  </div>
-                </section>
-              </div>
-            </div>
-            <div class="card-back">
-              <div class="card-scroll">
-                <div class="spacing1">
-                  <section>
-                    <h3>Zielgruppe</h3>
-                    <p class="zielgruppe"></p>
-                  </section>
-                  <section>
-                    <h3>Anwendungsfall</h3>
-                    <p class="anwendungsfall"></p>
-                  </section>
-                  <section>
-                    <h3>Beschreibung</h3>
-                    <p class="beschreibung"></p>
-                  </section>
-                  <section>
-                    <h3>Geeignete Personenzahl</h3>
-                    <p class="personenzahl"></p>
-                  </section>
-                  <section>
-                    <h3>Partizipationsgrad</h3>
-                    <p class="partizipationsgrad"></p>
-                  </section>
-                  <section>
-                    <h3>Art der Partizipation</h3>
-                    <p class="artDerPartizipation"></p>
-                  </section>
-                  <section>
-                    <h3>Voraussetzungen</h3>
-                    <p class="voraussetzungen"></p>
-                  </section>
-                  <section>
-                    <h3>Daten</h3>
-                    <p class="daten"></p>
-                  </section>
-                  <section>
-                    <h3>Technische Tools</h3>
-                    <p class="technischeTools"></p>
-                  </section>
-                  <section>
-                    <h3>Finanzielle Ressourcen</h3>
-                    <p class="finanzielleRessourcen"></p>
-                  </section>
-                  <section>
-                    <h3>Risiko/Wagnis</h3>
-                    <p class="risikoWagnis"></p>
-                  </section>
-                  <section>
-                    <h3>Schwierigkeiten/Hindernisse</h3>
-                    <p class="schwierigkeitenHindernisse"></p>
-                  </section>
-                  <section>
-                    <h3>Ursprung Top-Down</h3>
-                    <p class="ursprungTopDown"></p>
-                  </section>
-                  <section>
-                    <h3>Ursprung Bottom-Up</h3>
-                    <p class="ursprungBottomUp"></p>
-                  </section>
-                  <section>
-                    <h3>Dauer Intervall</h3>
-                    <p class="dauerIntervall"></p>
-                  </section>
-                  <section>
-                    <h3>Vorbereitungszeit Umsetzung</h3>
-                    <p class="vorbereitungszeitUmsetzung"></p>
-                  </section>
-                  <section>
-                    <h3>Vorbereitungszeit Initiierung</h3>
-                    <p class="vorbereitungszeitInitiierung"></p>
-                  </section>
-                  <section>
-                    <h3>Nachhaltigkeit</h3>
-                    <p class="nachhaltigkeit"></p>
-                  </section>
-                  <section>
-                    <h3>Ergebnistyp</h3>
-                    <p class="ergebnistyp"></p>
-                  </section>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <button class="slide-button" id="next"></button>
       </div>
+      <div class="flip-card" id="main-card">
+        <div class="flip-card-inner">
+          <div class="card-front">
+            <div class="spacing1">
+              <section>
+                <img class="card-icon" src="imgs/shapes.png">
+                <h3>Partizipationsmethode</h3>
+                <h1 class="titel"></h1>
+                <div class="card-footer">
+                  <p class="card-num">0/0</p>
+                </div>
+              </section>
+            </div>
+          </div>
+          <div class="card-back">
+            <div class="card-scroll">
+              <div class="spacing1">
+                <section>
+                  <h3>Zielgruppe</h3>
+                  <p class="zielgruppe"></p>
+                </section>
+                <section>
+                  <h3>Anwendungsfall</h3>
+                  <p class="anwendungsfall"></p>
+                </section>
+                <section>
+                  <h3>Beschreibung</h3>
+                  <p class="beschreibung"></p>
+                </section>
+                <section>
+                  <h3>Geeignete Personenzahl</h3>
+                  <p class="personenzahl"></p>
+                </section>
+                <section>
+                  <h3>Partizipationsgrad</h3>
+                  <p class="partizipationsgrad"></p>
+                </section>
+                <section>
+                  <h3>Art der Partizipation</h3>
+                  <p class="artDerPartizipation"></p>
+                </section>
+                <section>
+                  <h3>Voraussetzungen</h3>
+                  <p class="voraussetzungen"></p>
+                </section>
+                <section>
+                  <h3>Daten</h3>
+                  <p class="daten"></p>
+                </section>
+                <section>
+                  <h3>Technische Tools</h3>
+                  <p class="technischeTools"></p>
+                </section>
+                <section>
+                  <h3>Finanzielle Ressourcen</h3>
+                  <p class="finanzielleRessourcen"></p>
+                </section>
+                <section>
+                  <h3>Risiko/Wagnis</h3>
+                  <p class="risikoWagnis"></p>
+                </section>
+                <section>
+                  <h3>Schwierigkeiten/Hindernisse</h3>
+                  <p class="schwierigkeitenHindernisse"></p>
+                </section>
+                <section>
+                  <h3>Ursprung Top-Down</h3>
+                  <p class="ursprungTopDown"></p>
+                </section>
+                <section>
+                  <h3>Ursprung Bottom-Up</h3>
+                  <p class="ursprungBottomUp"></p>
+                </section>
+                <section>
+                  <h3>Dauer Intervall</h3>
+                  <p class="dauerIntervall"></p>
+                </section>
+                <section>
+                  <h3>Vorbereitungszeit Umsetzung</h3>
+                  <p class="vorbereitungszeitUmsetzung"></p>
+                </section>
+                <section>
+                  <h3>Vorbereitungszeit Initiierung</h3>
+                  <p class="vorbereitungszeitInitiierung"></p>
+                </section>
+                <section>
+                  <h3>Nachhaltigkeit</h3>
+                  <p class="nachhaltigkeit"></p>
+                </section>
+                <section>
+                  <h3>Ergebnistyp</h3>
+                  <p class="ergebnistyp"></p>
+                </section>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="slide-button main-btn" id="next"></button>
     </div>
   </div>
 </div>
-  <script src="index.js"></script>
+<script src="index.js"></script>
 <script src="js/cardFlip.js"></script>
 <script src="js/slideshow.js"></script>
 <script src="js/mobileSwipe.js"></script>
