add call to action

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/slideshow.css">
 </head>
 <body>
-<a href="deck.html" id="deck-overview" class="main-btn"></a>
+<a href="call.html" id="deck-overview" class="main-btn"></a>
 <div class="slideshow">
   <div class="card-container">
     <div class="flip-card-container">
