update feedback link

--- a/static/call.html
+++ b/static/call.html
@@ -43,12 +43,11 @@
                                     <div class="action-button center" style="width: 180px;background-color: aquamarine;" onclick="window.open('https://forms.gle/rPGZzqSXddksxVEZ9', '_blank').focus();">
                                         📌 <b>Methode einreichen!</b>
                                     </div>
-                                
                                 </section>
                                 <section>
                                     <h3>2) Geben Sie uns Feedback!</h3>
                                     <p>Geben Sie uns Feedback: Wir möchten Ihre Meinung zu unserem Fragebogen hören. Ihre Erkenntnisse werden uns helfen, unseren Ansatz zu verbessern und zu verfeinern.</p>
-                                    <div class="action-button center" style="width: 180px; background-color: aquamarine;" onclick=" window.location.href = 'mailto:johannes.schleiss@ovgu.de';">
+                                    <div class="action-button center" style="width: 180px; background-color: aquamarine;" onclick="window.open('https://forms.gle/JEf2981oMJgg1XQA9', '_blank').focus();">
                                         📌 <b>Feedback geben!</b>
                                     </div>
                                 </section>
