replace forms link

--- a/static/call.html
+++ b/static/call.html
@@ -40,7 +40,7 @@
                                 <section>
                                     <h3>1) Fügen Sie ihre Methoden hinzu!</h3>
                                     <p>Teilen Sie Ihre Beteiligungsmethoden: Haben Sie einzigartige oder kreative Methoden, um Menschen zur Teilnahme zu bewegen? Teilen Sie sie uns in unseren Google-Formularen mit! Ihre Ideen werden eine echte Wirkung haben. </p>
-                                    <div class="action-button center" style="width: 180px;background-color: aquamarine;" onclick="window.open('https://forms.gle/rPGZzqSXddksxVEZ9', '_blank').focus();">
+                                    <div class="action-button center" style="width: 180px;background-color: aquamarine;" onclick="window.open('https://forms.gle/xTFVsTggSoxB37Cj8', '_blank').focus();">
                                         📌 <b>Methode einreichen!</b>
                                     </div>
                                 
